--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_journal">
+    package="me.varad.my_journal">
    <application
         android:label="my_journal"
         android:name="${applicationName}"
