--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^3.3.10
