--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
+  encrypt: ^5.0.1
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^3.3.10
   firebase_core: ^1.13.1
