--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "my_journal",
-  "short_name": "my_journal",
+  "name": "MyJournal",
+  "short_name": "MyJournal",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
   "theme_color": "#6750A4",
-  "description": "A new Flutter project.",
+  "description": "An app to write down your day",
   "orientation": "portrait-primary",
   "prefer_related_applications": false,
   "icons": [
@@ -13,23 +13,6 @@
       "src": "icons/Icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
-    },
-    {
-      "src": "icons/Icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/Icon-maskable-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "icons/Icon-maskable-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ]
 }
