--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^1.13.1
   flutter:
     sdk: flutter
+  flutter_quill: ^4.1.1
   flutter_svg: ^1.0.3
   google_sign_in: ^5.2.4
   intl: ^0.17.0
