--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.2
   shared_preferences: ^2.0.13
+  tuple: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
