--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.0.4
   cupertino_icons: ^1.0.2
+  dynamic_color: ^1.5.4
   encrypt: ^5.0.1
   equatable: ^2.0.3
   eva_icons_flutter: ^3.1.0
