--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   flutter_quill: ^6.1.2
   flutter_svg: ^1.0.3
+  flutter_switch: ^0.3.2
   google_sign_in: ^5.2.4
   intl: ^0.17.0
   provider: ^6.0.2
